--- a/courses/example/example1/index.html
+++ b/courses/example/example1/index.html
@@ -381,7 +381,7 @@ Tip 1 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis posuere tell
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#projects"><span>项目</span></a>
+          <a class="nav-link " href="/#projects"><span>博客目录</span></a>
         </li>
 
         
