--- a/publication/journal-article/index.html
+++ b/publication/journal-article/index.html
@@ -425,7 +425,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#projects"><span>项目</span></a>
+          <a class="nav-link " href="/#projects"><span>博客目录</span></a>
         </li>
 
         
