--- a/terms/index.html
+++ b/terms/index.html
@@ -379,7 +379,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#projects"><span>项目</span></a>
+          <a class="nav-link " href="/#projects"><span>博客目录</span></a>
         </li>
 
         
