--- a/talk/example/index.html
+++ b/talk/example/index.html
@@ -832,7 +832,7 @@
 
     <div class="media-body">
       <h5 class="card-title"><a href="https://strivefar.github.io/">YoungFar</a></h5>
-      <h6 class="card-subtitle">一个热爱技术，热爱分享的精神小伙</h6>
+      <h6 class="card-subtitle">我是YoungFar，这里用于记录我的学习历程，积累和分享自己的知识库</h6>
       
       <ul class="network-icon" aria-hidden="true">
   
