--- a/404.html
+++ b/404.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="一个热爱技术，热爱分享的精神小伙">
+  <meta name="description" content="我是YoungFar，这里用于记录我的学习历程，积累和分享自己的知识库">
 
   
   <link rel="alternate" hreflang="en-us" href="https://strivefar.github.io/404.html">
@@ -231,7 +231,7 @@
   <meta property="og:site_name" content="YoungFar的个人博客——Love&amp;Share">
   <meta property="og:url" content="https://strivefar.github.io/404.html">
   <meta property="og:title" content="404 Page not found | YoungFar的个人博客——Love&amp;Share">
-  <meta property="og:description" content="一个热爱技术，热爱分享的精神小伙"><meta property="og:image" content="https://strivefar.github.io/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
+  <meta property="og:description" content="我是YoungFar，这里用于记录我的学习历程，积累和分享自己的知识库"><meta property="og:image" content="https://strivefar.github.io/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
   <meta property="twitter:image" content="https://strivefar.github.io/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png"><meta property="og:locale" content="en-us">
   
     
