--- a/index.html
+++ b/index.html
@@ -909,7 +909,7 @@
       <h4><a href="/project/post/c_advanced/" >浮点数的秘密</a></h4>
       
       <div class="article-style">
-        <p>浮点数在内存中的存储方式 浮点数在内存中由以下三部分组成： 符号位 指数 尾数 无论是float类型还是double类型的数据，在计算机内部的表示方法</p>
+        <p>1. 浮点数在内存中的存储方式 2. 浮点数存储示例 2.1. 实数8.25在内存中的float表示 2.2. 编程验证 3. 精度问题 3.1. 编程验证 1. 浮点数在内存中的存储方式 浮点</p>
       </div>
       
     </div>
