--- a/courses/example/example1/index.html
+++ b/courses/example/example1/index.html
@@ -588,6 +588,11 @@ Tip 1 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis posuere tell
 
 
             
+  <span id="/courses/example/example1/" class="leancloud_visitors" data-flag-title="Example Page 1">
+    <span class="post-meta-item-text">文章阅读量 </span>
+    <span class="leancloud-visitors-count">1000000</span>
+    <p></p>
+  </span>
   
   <div id="vcomments"></div>
   <script src="//cdn1.lncld.net/static/js/3.0.4/av-min.js"></script>
