--- a/courses/example/index.html
+++ b/courses/example/index.html
@@ -592,6 +592,11 @@
 
 
             
+  <span id="/courses/example/" class="leancloud_visitors" data-flag-title="Overview">
+    <span class="post-meta-item-text">文章阅读量 </span>
+    <span class="leancloud-visitors-count">1000000</span>
+    <p></p>
+  </span>
   
   <div id="vcomments"></div>
   <script src="//cdn1.lncld.net/static/js/3.0.4/av-min.js"></script>
