--- a/publication/conference-paper/index.html
+++ b/publication/conference-paper/index.html
@@ -939,6 +939,11 @@
 
 
   
+  <span id="/publication/conference-paper/" class="leancloud_visitors" data-flag-title="An example conference paper">
+    <span class="post-meta-item-text">文章阅读量 </span>
+    <span class="leancloud-visitors-count">1000000</span>
+    <p></p>
+  </span>
   
   <div id="vcomments"></div>
   <script src="//cdn1.lncld.net/static/js/3.0.4/av-min.js"></script>
