--- a/publication/journal-article/index.html
+++ b/publication/journal-article/index.html
@@ -879,6 +879,11 @@
 
 
   
+  <span id="/publication/journal-article/" class="leancloud_visitors" data-flag-title="An example journal article">
+    <span class="post-meta-item-text">文章阅读量 </span>
+    <span class="leancloud-visitors-count">1000000</span>
+    <p></p>
+  </span>
   
   <div id="vcomments"></div>
   <script src="//cdn1.lncld.net/static/js/3.0.4/av-min.js"></script>
