--- a/publication/preprint/index.html
+++ b/publication/preprint/index.html
@@ -915,6 +915,11 @@
 
 
   
+  <span id="/publication/preprint/" class="leancloud_visitors" data-flag-title="An example preprint / working paper">
+    <span class="post-meta-item-text">文章阅读量 </span>
+    <span class="leancloud-visitors-count">1000000</span>
+    <p></p>
+  </span>
   
   <div id="vcomments"></div>
   <script src="//cdn1.lncld.net/static/js/3.0.4/av-min.js"></script>
