--- a/talk/example/index.html
+++ b/talk/example/index.html
@@ -878,6 +878,11 @@
 
 
   
+  <span id="/talk/example/" class="leancloud_visitors" data-flag-title="Example Talk">
+    <span class="post-meta-item-text">文章阅读量 </span>
+    <span class="leancloud-visitors-count">1000000</span>
+    <p></p>
+  </span>
   
   <div id="vcomments"></div>
   <script src="//cdn1.lncld.net/static/js/3.0.4/av-min.js"></script>
