--- a/index.html
+++ b/index.html
@@ -909,7 +909,7 @@
       <h4><a href="/project/post/fbmem%E5%88%86%E6%9E%90/" >Fbmem分析</a></h4>
       
       <div class="article-style">
-        <p>fbmem.c分析 file_operations结构体 static const struct file_operations fb_fops = { .owner = THIS_MODULE, .read = fb_read, .write = fb_write, …</p>
+        <p>1. file_operations结构体 2. 入口函数 3. 注册函数 3.1. register_framebuffer 3.2. do_register_framebuffer 4. 驱动调用关系 4.1. fbmem.c的作用 4.2. 调用示例 5. 结 …</p>
       </div>
       
     </div>
